# kutub

./: .coveragerc  .gitignore  .gitlab-ci.yml  README.md  README.rst  makemigrations.py  pyproject.toml  run_test.sh  runtests.py
.github/workflows/: docs.yml  pipeline.yml
docs/: conf.py  index.rst
kutub/: admin.py  apps.py  cms_apps.py  cms_menus.py  export.py  fields.py  forms.py  maps.py  models.py  readers.py  serializers.py  urls.py  views.py
kutub/management/commands/: export-mss-csv.py  import-bischoff.py  import-europa-inventa.py
kutub/migrations/: 0001_initial.py  0002_auto_20210912_0012.py  0003_auto_20210912_0314.py  0004_auto_20210912_0555.py  0005_manuscript_collation.py  0006_manuscript_foliation.py  0007_manuscript_condition.py  0008_auto_20210912_0638.py  0009_manuscript_catchwords.py  0010_auto_20210912_0704.py  0011_manuscript_layout.py  0012_auto_20210912_0722.py  0013_manuscript_music_notation.py  0014_manuscript_binding_description.py  0015_manuscript_seal_description.py  0016_manuscript_support_description.py  0017_auto_20210912_0750.py  0018_auto_20210912_0751.py  0019_auto_20210914_0631.py  0020_contentitem.py  0021_auto_20210914_0804.py  0022_auto_20210914_0821.py  0023_auto_20210915_2156.py  0024_auto_20210915_2200.py  0025_auto_20210915_2200.py  0026_auto_20210915_2208.py  0027_auto_20210916_0039.py  0028_auto_20210916_0726.py  0029_manuscript_note.py  0030_manuscript_iiif_manifest_url.py  0031_language.py  0032_auto_20211001_1924.py  0033_auto_20211001_2008.py  0034_manuscript_url.py  0035_auto_20211002_0004.py  0036_auto_20211002_0011.py  0037_auto_20211017_0709.py  0038_alter_language_extlang_and_more.py  0039_manuscript_physical_description_summary.py  0040_manuscript_order.py  (+1 more)
kutub/static/kutub/js/: django_select2.js  manuscript_list.js
kutub/templates/kutub/: all_repositories_map.html  attribute_row.html  content_item_form.html  content_item_formsets.html  detail_css.html  field.html  form.html  form_preamble.html  grid_attribute.html  grid_attribute_form.html  iiif_manifest.html  language_detail.html  language_form.html  language_list.html  manuscript_detail.html  manuscript_form.html  manuscript_list.html  pagination.html  repository_detail.html  repository_list.html  repository_map.html  repository_map_iframe.html  tag_detail.html  tag_list.html  text_language_detail.html  text_language_form.html
kutub/templatetags/: kutub.py
tests/: settings.py  test_export.py  test_forms.py  test_maps.py  test_models.py  test_readers.py  test_settings.py  test_templatetags.py  urls.py
tests/testdata/: ANU-77-06.xml  MS1-ContentType-Data.xml  MS3-ContentType-Data.xml  Sydney-Nicholson6.xml  bischoff-test.xlsx  europa-inventa-items-head.csv  europa-inventa-manuscripts-head.csv
utils/: direct_export.py
